--- a/public/index.html
+++ b/public/index.html
@@ -6,5 +6,6 @@
     </head>
     <body>
         <h1>Hello Express.js!</h1>
+        <p>Welcome a node.js Express application demo</p>
     </body>
 </html>
